--- a/css/style.css
+++ b/css/style.css
@@ -103,6 +103,6 @@ h2, h3, h4, h5, p {
 		text-align: center;
 	}
 /******************-----*/
-.btn-default {
-	width:100px;
+.btn-left {
+	text-align: right;
 }
