--- a/css/style_formation.css
+++ b/css/style_formation.css
@@ -1,30 +1,19 @@
-<!DOCTYPE html>
-<!-- -->
-<html>
-  <head>
-    <meta charset = "utf-8" />
-    <meta name = "viewport" content ="width=device-width, user-scalable=no, initial-scale=1.0" />
-    <link href="css/bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
-    <link rel="stylesheet" href="asset/font-awesome/css/font-awesome.min.css">
-    <link href="css/style_formation.css" rel="stylesheet" media="screen">
-    	<title>"Julie Alary Personal One Page Site || Formation"</title>
-    <!--[if lt IE 9]>
-      <link rel="stylesheet" type="text/css"href="ie-lt9.css">
-      <script type="text/javascript" src="js/html5shiv.js"</script>
-    <![endif]-->
-    <!--[if gte IE 9]>
-      Code HTML plus superieur ou egal IE 9
-      <link rel="stylesheet" type="text/css"href="ie-gte9.css">
-    <![endif]-->
-    
-    <!--[if !IE]><!-->
-        <!-- // Code HTML réservé aux navigateurs autres que IE -->
-      <link href="css/style_formation.css" rel="stylesheet" media="screen" type="text/css">
-    <!--<[endif]-->
-  </head>
+/******************-----PARAM GENERAL-----******************/
 
-<body>
-	 <footer role="contentinfo"><p>&copy Julie Alary</p></footer>
-</body>
+@import url(https://fonts.googleapis.com/css?family=Teko);
 
-</html>
+*, a{
+	font-family: 'Teko', sans-serif;
+	color:pink;
+	text-shadow: 5px 5px 10px #222222;
+}
+html {
+	font-size: 62.5%;
+}
+body {
+	background:url(http://i.imgur.com/l7JtSpk.jpg)no-repeat center center fixed;
+  	-webkit-background-size: cover;
+  	-moz-background-size: cover;
+  	-o-background-size: cover;
+  	background-size: cover;
+}
