--- a/css/style_formation.css
+++ b/css/style_formation.css
@@ -25,3 +25,8 @@ body {
 	color:pink;
 	background-color: transparent;
 }
+/******************-----LESSON-----******************/
+
+.lesson {
+	border-color:pink;
+}
