--- a/css/style_formation.css
+++ b/css/style_formation.css
@@ -35,11 +35,11 @@ h2, p{
 }
 	.lesson_one h2 {
 		background-color: #222222;
+		font-size: 3.5rem;
 	}
 	.lesson_one ul {
 		background-color: #222222;
 		border-radius: 0 0 10px 10px;
+		font-size: 2rem;
 	}
-
-
-
+/******************TEST TIMELINE*****************/
