--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,7 @@ h2, h3, h4, h5, p {
 #jumbotron {
 	line-height:100vh;
     vertical-align:middle;
+    margin-bottom: 50rem;
 }
 	#jumbotron h1 {
 		font-size: 6rem;
@@ -47,7 +48,7 @@ h2, h3, h4, h5, p {
 /******************-----SECTION : PORTFOLIO-----******************/
 #portfolio {
 	border-top: 1px solid pink;
-	margin-top: 20%;
+	margin-top: 20rem;/*permet de bien coller avec le scroll*/
 }
 	#portfolio img{
 		width: 40rem;
@@ -57,6 +58,7 @@ h2, h3, h4, h5, p {
 	#portfolio .row {
 		text-align:center;
 		margin-bottom: 10%;
+		margin-top: 10rem;
 	}
 /******************-----SECTION : SKILLS-----******************/
 #skills {
@@ -74,23 +76,31 @@ h2, h3, h4, h5, p {
 	}
 	#skills p {
 		font-size: 3rem;
-		margin-top: 10%;
+		margin-top: 5rem;
 	}
 	#skills .row img {
 		width:7.5rem;
 	}
-	#skills .row:nth-child(1), #skills .row:nth-child(2) {
-		margin-top: 10rem;
-		margin-bottom: 10rem;
-	}
-	.btn-lg {
+	#skills .btn-lg {
 		background-color: pink;
 		border-color: pink;
+		margin-top: -4rem;
 	}
-	.btn-lg:hover{
+	#skills .btn-lg:hover{
 		background-color: #222222;
 		color:pink;
 	}
+	#skills .row:nth-child(1), #skills .row:nth-child(2) {/*centrage 2nd row*/
+		margin-top: 10rem;
+		margin-bottom: 10rem;	
+	}
+	#skills .rails {
+		margin-top: 2.5rem;
+	}
+	#skills > strong > div:nth-child(3) {
+		margin-bottom: 20rem;
+	}
+	
 /******************-----SECTION : CONTACT-----******************/
 #contact {
 	border-top: 1px solid pink;
@@ -100,7 +110,7 @@ h2, h3, h4, h5, p {
 		font-size: 7rem;
 	}
 	#contact h2 {
-		margin-top: 10rem;
+		margin-top: 17rem;
 		font-size: 5rem;
 	}
 	#contact img {
@@ -110,3 +120,4 @@ h2, h3, h4, h5, p {
 	#contact .row {
 		text-align: center;
 	}
+/******************TEST TEST TEST TEST TEST TEST TEST ******************/
