--- a/css/style_cv.css
+++ b/css/style_cv.css
@@ -17,18 +17,40 @@ body {
   	-o-background-size: cover;
   	background-size: cover;
 }
-footer p {
+.navbar-text {/*permet le centrage du footer*/
+  float:inherit;
+}
+h2 {
 	text-align: center;
+	font-size: 3.5rem;
+	margin-bottom: 4rem;
+	margin-top: 5rem;
 }
-
-/*-------------------------------------------------------------*/
-.jumbotron {
-	background-color: transparent;
+h3 {
+	text-decoration: underline;
 }
-	.jumbotron h1 {
-		color:pink;
-		display: inline-block;
+p {
+	font-size: 2rem;
+	margin-left: 2rem;
+}
+/*-----------------------HEADER-----------------------------*/
+.presentation {
+	margin-top: 2rem;
+}
+	.presentation h1 {
+		font-size: 6rem;
+		margin-top: 5rem;
 	}
-	.jumbotron img {
-		display: inline-block;
-	}
+/*-----------------------FORMATION----------------------------*/
+article {
+	border-right:1px solid pink;
+}
+.intitule {
+	line-height: 4rem;
+}
+span {
+	font-size: 2.5rem;
+}
+hr {
+	width: 50px;
+}
