--- a/css/style.css
+++ b/css/style.css
@@ -30,18 +30,18 @@ h2, h3, h4, h5, p {
 
 /******************-----NAV-----******************/
 .navbar-fixed-top { /*couleur du menu*/
-	background-color: #222222;
-  	opacity: 0.6;
-  	border-bottom:1px solid pink;
+    background-color: #222222;
+    opacity: 0.6;
+    border-bottom:1px solid pink;
 }
 	.navbar-fixed-top a {
 		font-size: 4rem;
-		text-decoration: none;
+	   text-decoration: none;
 		margin:0 1.5rem;
 	}
 /******************-----HEADER : JUMBOTRON-----******************/
 #jumbotron {
-	line-height:100vh;
+	 line-height:100vh;
     vertical-align:middle;
     margin-bottom: 50rem;
 }
@@ -73,7 +73,7 @@ h2, h3, h4, h5, p {
 }
 	#skills h2{
 		font-size: 5rem;
-		margin-top: 10%;
+		margin-top: 10rem;
 	}
 	#skills h3 {
 		font-size: 4rem;
@@ -121,10 +121,6 @@ h2, h3, h4, h5, p {
 	#contact h2 {
 		margin-top: 17rem;
 		font-size: 5rem;
-	}
-	#contact img {
-		border-radius: 2rem;
-		width: 7.5rem;
 	}
 /******************-----SECTION : FOOTER-----******************/
 .navbar-text {
@@ -218,6 +214,7 @@ h2, h3, h4, h5, p {
   animation-iteration-count: 1;
   color:pink;
  }
+
 /******************     ANIMATION lien objectif 3d         ******************/
 
 /* Underline From Left */
@@ -251,4 +248,64 @@ h2, h3, h4, h5, p {
 }
 .hvr-underline-from-left:hover:before, .hvr-underline-from-left:focus:before, .hvr-underline-from-left:active:before {
   right: 0;
+}
+
+/******************     RESPONSIVE        ******************/
+@media (max-width: 768px) {
+  #jumbotron h1 {
+    margin-top: 30rem;
+  }
+  #contact h2 {
+    margin-top: 15rem;
+    margin-bottom: 15rem;
+  }
+  #contact .second_row {
+    padding-top: 10rem;
+  }
+}
+
+@media (max-width: 480px) {
+  .navbar-fixed-top a {
+    font-size: 3rem;
+  }
+  #jumbotron h1 {
+    margin-top: 18rem;
+  }
+  #contact .row{
+    font-size: 5rem;
+    margin:inherit;
+  }
+  #contact h2 {
+    margin-bottom: 10rem;
+  }
+
+}
+
+@media (max-width: 320px) {
+    .navbar-fixed-top a {
+        font-size: 2.5rem;
+        margin:0 0.5rem;
+    }
+    #jumbotron h1 {
+        font-size: 4rem;
+        margin-top:10rem; 
+    }
+    #skills h2 {
+        font-size: 3rem;
+    }
+    #skills h3 {
+        font-size: 2.5rem;
+    }
+    #skills h3 {
+        font-size: 2.1rem;
+    }
+    #skills h4 {
+        font-size: 1.8rem;
+    }    
+    #skills p {
+        font-size: 1.8rem;
+    }
+    #contact h2 {
+        margin-top: 8rem;
+    }
 }
