--- a/css/style_cv.css
+++ b/css/style_cv.css
@@ -41,12 +41,12 @@ p {
 		font-size: 6rem;
 		margin-top: 5rem;
 	}
+	.presentation img {
+		margin-top: 2rem;
+	}
 /*-----------------------FORMATION----------------------------*/
 article {
 	border-right:1px solid pink;
-}
-.intitule {
-	line-height: 4rem;
 }
 span {
 	font-size: 2.5rem;
@@ -54,6 +54,10 @@ span {
 hr {
 	width: 50px;
 }
+.intitule {/*line heigth de la partie formation*/
+	line-height: 4rem;
+}
+/*bouton*/
 .btn-lg {
 	background-color: pink;
 	border-color: pink;
@@ -64,11 +68,12 @@ hr {
 	color:pink;
 	border-color: pink;
 }
-.fa-arrow-left {/*custom de la fleche du bas*/
-		font-size: 3rem;
+.fa-arrow-left, .fa-home {/*custom de la fleche du bas*/
+		font-size: 4rem;
 		margin-bottom: 4rem;
-		margin-top: 4rem;
-	}
+		margin-top: 6rem;
+		letter-spacing: 1rem;
+}
 footer .text-center {
 	margin-top:6rem;
 }
