--- a/css/style.css
+++ b/css/style.css
@@ -138,10 +138,9 @@ h2, h3, h4, h5, p {
   cursor: pointer;
 }
 /******************-----SECTION : FOOTER-----******************/
-.navbar-text {
+.navbar-text {/*permet de centrer le te texte*/
   float:inherit;
 }
-
 
 /******************     ANIMATION LIEN MENU !!         ******************/
 /* Wobble To Top Right */
