--- a/css/style.css
+++ b/css/style.css
@@ -136,6 +136,23 @@ h2, h3, h4, h5, p {
 }
 .fa-twitter:hover {/*permet d'avoir un pointeur sur l'incone twitter*/
   cursor: pointer;
+  color: #5ea9dd;
+}
+.fa-facebook:hover {
+  color: #3b5998;
+}
+.fa-linkedin:hover {
+  color: #0177b5;
+}
+.fa-envelope-o:hover {
+  color: #d94836;
+}
+.fa-github-alt:hover{
+  color:black;
+  text-shadow: -1px 1px 1px white;
+}
+.fa-codepen:hover {
+  color:white;
 }
 /******************-----SECTION : FOOTER-----******************/
 .navbar-text {/*permet de centrer le te texte*/
