--- a/css/style.css
+++ b/css/style.css
@@ -99,16 +99,17 @@ a:focus {
 		background-color: #222222;
 		color:pink;
 	}
-	#skills .row:nth-child(1), #skills .row:nth-child(2) {/*centrage 2nd row*/
+	#skills .row:nth-child(1), .row:nth-child(2), #skills .row:nth-child(3) {/*centrage 2nd row*/
 		margin-top: 10rem;
 		margin-bottom: 10rem;	
 	}
 	#skills .rails {
 		margin-top: 2.5rem;
 	}
-	#skills > strong > div:nth-child(3) {
-		margin-bottom: 20rem;
+	#skills > div:nth-child(4) {
+		margin-bottom: 10rem;
 	}
+
 	
 /******************-----SECTION : CONTACT-----******************/
 #contact {
