--- a/css/style.css
+++ b/css/style.css
@@ -69,6 +69,10 @@ a:focus {
 		margin-bottom: 10%;
 		margin-top: 10rem;
 	}
+    #portfolio p {
+        font-size:2rem;
+        margin-top:0.5em;
+    }
 /******************-----SECTION : SKILLS-----******************/
 #skills {
 	border-top: 1px solid pink;
