background image bug

--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ html {
 	font-size: 62.5%;
 }
 body {
-	background:url(http://i.imgur.com/l7JtSpk.jpg)no-repeat center center fixed;
+	background:url(http://img11.hostingpics.net/pics/426370mainbackground.jpg)no-repeat center center fixed;
   	-webkit-background-size: cover;
   	-moz-background-size: cover;
   	-o-background-size: cover;
