--- a/css/style.css
+++ b/css/style.css
@@ -287,6 +287,22 @@ a:focus {
   right: 0;
 }
 
+/******************     Meteo App        ******************/
+body {
+    background: url('https://image.freepik.com/free-vector/grass-and-sky_23-2147499459.jpg')no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+
+.currentPosition {
+    margin-top: 5%;
+    border: 1px solid #222222;
+    border-radius: 2%;
+    box-shadow: 1px 1px 12px #555;
+}
+
 /******************     RESPONSIVE        ******************/
 @media (max-width: 768px) {
   #jumbotron h1 {
