--- a/css/style.css
+++ b/css/style.css
@@ -16,12 +16,13 @@ html {
 	font-size: 62.5%;
 }
 body {
-	background:url(http://img11.hostingpics.net/pics/426370mainbackground.jpg)no-repeat center center fixed;
-  	-webkit-background-size: cover;
-  	-moz-background-size: cover;
-  	-o-background-size: cover;
-  	background-size: cover;
+    background:url(http://i.imgur.com/l7JtSpk.jpg)no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 }
+.navb
 h2, h3, h4, h5, p {
 	text-align: center;
 }
